--- a/src/template.html
+++ b/src/template.html
@@ -151,7 +151,7 @@
 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28">
                   Source Code
                 </a>
               </div>
