--- a/src/template.html
+++ b/src/template.html
@@ -36,6 +36,8 @@
 
     <!-- Remove this script once you setup your custom portfolio -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script src="https://kit.fontawesome.com/dd9d2fc1ba.js" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   </head>
 
   <!-- Follow the HTML instructions to create your stunning portfolio website -->
@@ -81,10 +83,18 @@
                 ||Former Research Intern at DRDO Delhi||IBM Certified Data Science Professional||
               </p>
               <p class="about-wrapper__info-text">
-                Just joined the amazing company, the company works on amazing projects.
-                My role is working on various problems related to Data Science topics such as time series modeling, 
-                cleansing, and standardization results.
-                 I love making different Machine Learning models and learning a lot of things.
+                I am a Computer Science Engineering graduate, highly interested in Data Science.
+                Currently I'm persuing Bachelor of Engineering at BIT MESRA.
+                I have previously interned at DRDO Dehli as a Data Science Intern,
+                worked under senior scientist Pallaw Kumar Kishra.
+                Apart from this I have done various Data Science Projects as well,
+                I have made my own self driving car project, the car will run on Carla Simulator like normal cars.
+                I am constantly looking to improve my data science skills with projects, challenges and learning opportunities.
+                In 2019 at my college tech fest I stood 2nd position in project pitching and I got huge appreciation.
+                Apart from this, I have previously engaged in many co-curricular activities including being an active part of my college’s 
+                Computer Society of India convenor, I teach students and organize workshops for them.
+                My experience in both technical and non-technical sides has provided me with a perfect blend of soft skills and technical knowledge, 
+                I am highly diligent, intellectually curious and achievement oriented in my work.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1SkLE-_i08rA3paGOEqF7dcVyg1Xty3g1/view?usp=sharing">
@@ -151,7 +161,7 @@
 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28/Self-Driving-Car">
                   Source Code
                 </a>
               </div>
@@ -268,6 +278,12 @@
           </a>
           <a href="https://github.com/adityasharma28" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
+          </a>
+          <a href="https://github.com/adityasharma28" target="_blank">
+            <i class="fab fa-hackerrank"></i>
+          </a>
+          <a href="https://github.com/adityasharma28" target="_blank">
+            <span class="iconify" data-icon="simple-icons:leetcode" data-inline="false"></span>
           </a>
         </div>
 
