--- a/src/template.html
+++ b/src/template.html
@@ -279,10 +279,10 @@
           <a href="https://github.com/adityasharma28" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-          <a href="https://github.com/adityasharma28" target="_blank">
+          <a href="https://www.hackerrank.com/aditya28071999" target="_blank">
             <i class="fab fa-hackerrank"></i>
           </a>
-          <a href="https://github.com/adityasharma28" target="_blank">
+          <a href="https://leetcode.com/aadityasharma/" target="_blank">
             <span class="iconify" data-icon="simple-icons:leetcode" data-inline="false"></span>
           </a>
         </div>
