twitter link updated

--- a/src/template.html
+++ b/src/template.html
@@ -269,7 +269,7 @@
       <div class="container">
         
         <div class="social-links">
-          <a href="https://twitter.com/aadi_sharma28?lang=en" target="_blank">
+          <a href="https://twitter.com/sharma_aadi28" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
           </a>
           
