--- a/src/template.html
+++ b/src/template.html
@@ -86,7 +86,7 @@
                 I am a Computer Science Engineering graduate, highly interested in Data Science.
                 Currently I'm persuing Bachelor of Engineering at BIT MESRA.
                 I have previously interned at DRDO Dehli as a Data Science Intern,
-                worked under senior scientist Pallaw Kumar Kishra.
+                worked under senior scientist Pallaw Kumar Mishra.
                 Apart from this I have done various Data Science Projects as well,
                 I have made my own self driving car project, the car will run on Carla Simulator like normal cars.
                 I am constantly looking to improve my data science skills with projects, challenges and learning opportunities.
@@ -163,6 +163,9 @@
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28/Self-Driving-Car">
                   Source Code
+                </a>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://selfdrivingcar.herokuapp.com/">
+                 See Live
                 </a>
               </div>
             </div>
