pot hole project added

--- a/src/template.html
+++ b/src/template.html
@@ -182,6 +182,38 @@ I am highly diligent, intellectually curious and achievement oriented in my work
           </div>
           <!-- /END Project -->
 
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Poth Hole Detection</h3>
+                <div>
+                  <p class="mb-4">
+                   A pothole detection tool that uses opencv and image processing to detect
+                    potholes in input image and draws contours for the pothole and also buzzes the alarm.
+                    It is programmed to send the update to desired email and also
+                    I tried to process the info in Hadoop map reduce cluster.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28/Poth-Hole-Detection">
+                 Source Code
+                </a>
+    
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/9.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+
           
            <!-- Each .row is a project -->
            <div class="row">
