--- a/src/template.html
+++ b/src/template.html
@@ -205,7 +205,7 @@ I am highly diligent, intellectually curious and achievement oriented in my work
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/9.png" />
+                    <img class="img-fluid" src="./assets/9.jpg" />
                   </div>
                 </a>
               </div>
