--- a/src/template.html
+++ b/src/template.html
@@ -97,7 +97,7 @@ My experience in both technical and non-technical sides has provided me with a p
 I am highly diligent, intellectually curious and achievement oriented in my work.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="#">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1IC60MpxMX0WMXLskwu_2VSUXrnA3f0uh/view?usp=sharing">
                   View Resume
                 </a>
               </span>
