--- a/src/template.html
+++ b/src/template.html
@@ -313,7 +313,7 @@ I am highly diligent, intellectually curious and achievement oriented in my work
           <label>
             <span class="section-title">Get in touch:</span> 
             <input class="form-control mb-2" id="exampleInputEmail1" placeholder="First Name" type="text" name="name" />
-            <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Second Name" name="name"/>
+            <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Second Name" name="nameLast"/>
             <label><textarea class="form-control mb-2" id="exampleInputEmail1" name="message" rows="5" cols="60" placeholder="Thoughts?" ></textarea></label></label>
           </label>    
         </p>
