--- a/src/template.html
+++ b/src/template.html
@@ -83,18 +83,22 @@
 
               </p>
               <p class="about-wrapper__info-text">
-                I am a Computer Science Engineering graduate, highly interested in Data Science.
-Currently I'm persuing Bachelor of Engineering at BIT MESRA.
-I have previously interned at DRDO Dehli as a Data Science Intern,
-worked under senior scientist Pallaw Kumar Kishra.
-Apart from this I have done various projects,
-I have made my own self driving car project, the car will run on Carla Simulator like normal cars.
-I am constantly looking to improve my skills with projects, challenges and learning opportunities.
-In 2019 at my college tech fest I stood 2nd position in project pitching and I got huge appreciation.
-Apart from this, I have previously engaged in many co-curricular activities including being an active part of my college’s 
-Computer Society of India convenor, I teach students and organize workshops for them.
-My experience in both technical and non-technical sides has provided me with a perfect blend of soft skills and technical knowledge, 
-I am highly diligent, intellectually curious and achievement oriented in my work.
+                I am a Computer Science Engineering graduate, highly interested in Data Science. 
+                Currently, I'm pursuing Bachelors in Engineering at BIT MESRA and 
+                started my professional journey at corporate with MAQ Software.
+                <br>
+                Apart from that, I've also been devoting my time to some of my side projects and free-lancing 
+                work seeking learning opportunities with every step. And to feed my unsatiable will for
+                 work involving my area of interests.
+                <br>
+                I have previously interned at DRDO Dehli as a Data Science Intern, worked under senior scientist 
+                Pallaw Kumar Mishra. I am constantly looking to improve my skills with projects, challenges, and 
+                learning opportunities. Apart from this, I have previously engaged in many co-curricular activities 
+                including being an active part of my college’s Computer Society of India convenor, 
+                <br>
+                I teach students and organize workshops for them. My experience in both technical and non-technical 
+                sides has provided me with a perfect blend of soft skills and technical knowledge, I am highly diligent, 
+                intellectually curious, and achievement-oriented in my work.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1IC60MpxMX0WMXLskwu_2VSUXrnA3f0uh/view?usp=sharing">
@@ -304,6 +308,51 @@ I am highly diligent, intellectually curious and achievement oriented in my work
       </div>
     </section> -->
     <!-- /END Contact Section -->
+
+    <section id="projects">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">
+            To know more about the projects I've been working on and for free lance bids, 
+            Leave your details below.
+          </h2>
+
+
+          <!-- Each .row is a project -->
+          <!-- <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Self Driving Car</h3>
+                <div>
+                  <p class="mb-4">
+                    In this project, I have written and implemented a controller for the CARLA simulator.
+                    The goal is to control the vehicle to follow a race track by navigating through preset waypoints.
+                    The vehicle needs to reach these waypoints at a certain
+                    desired speed.
+                    Dec 2019 - Jul 2020
+
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28/Self-Driving-Car">
+                  Source Code
+                </a>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://selfdrivingcar.herokuapp.com/">
+                 See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/2.jpg" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div> -->
+        </section>
+
     <section id="contact">
     <form name="contact" method="POST" data-netlify="true">
       <input type="hidden" name="form-name" value="contact">
