--- a/src/template.html
+++ b/src/template.html
@@ -155,6 +155,41 @@
             </div>
           </div>
           <!-- /END Project -->
+          
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Serverless Full Stack</h3>
+                <div>
+                  <p class="mb-4">
+                    Built and deployed a full stack MERN application.
+                    Curtailed the duress of explicit backend for deployment by using
+                    MONGO DB Stitch, hence eliminated the use of express and node as explicity
+                    server requirements.
+                    Demonstrates server as a service.
+                    Dec 2020 - Feb 2021
+
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/adityasharma28">
+                  Source Code
+                </a>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://serverlessdemons-kbedn.mongodbstitch.com/">
+                 See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/10.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
