--- a/src/template.html
+++ b/src/template.html
@@ -83,13 +83,11 @@
 
               </p>
               <p class="about-wrapper__info-text">
-                I am a Computer Science Engineering graduate, highly interested in Data Science. 
-                Currently, I'm pursuing Bachelors in Engineering at BIT MESRA and 
-                started my professional journey at corporate with MAQ Software.
+                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development. Currently, 
+                I'm working as a Freelancer at Sanskrutihomes and started my professional journey at corporate with MAQ Software.
                 <br>
-                Apart from that, I've also been devoting my time to some of my side projects and free-lancing 
-                work seeking learning opportunities with every step. And to feed my unsatiable will for
-                 work involving my area of interests.
+                Apart from that, I've also been devoting my time to some of my side projects and free-lancing work seeking learning 
+                opportunities with every step. And to feed my unsatiable will for work involving my area of interests.
                 <br>
                 I have previously interned at DRDO Dehli as a Data Science Intern, worked under senior scientist 
                 Pallaw Kumar Mishra. I am constantly looking to improve my skills with projects, challenges, and 
