--- a/src/template.html
+++ b/src/template.html
@@ -395,7 +395,8 @@
           <label>
             <span class="section-title">Get in touch:</span> 
             <input class="form-control mb-2" id="exampleInputEmail1" placeholder="First Name" type="text" name="name" />
-            <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Second Name" name="nameLast"/>
+            <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Please enter your mail id." name="email" required/>
+            <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Please enter contact no." name="Contact No" required/>
             <label><textarea class="form-control mb-2" id="exampleInputEmail1" name="message" rows="5" cols="60" placeholder="Thoughts?" ></textarea></label></label>
           </label>    
         </p>
