--- a/src/template.html
+++ b/src/template.html
@@ -394,7 +394,7 @@
           <p>
           <label>
             <span class="section-title">Get in touch:</span> 
-            <input class="form-control mb-2" id="exampleInputEmail1" placeholder="First Name" type="text" name="name" />
+            <input class="form-control mb-2" id="exampleInputEmail1" placeholder="Name" type="text" name="name" />
             <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Please enter your mail id." name="email" required/>
             <input class="form-control mb-2" id="exampleInputEmail1" type="text" placeholder="Please enter contact no." name="Contact No" required/>
             <label><textarea class="form-control mb-2" id="exampleInputEmail1" name="message" rows="5" cols="60" placeholder="Thoughts?" ></textarea></label></label>
