--- a/src/template.html
+++ b/src/template.html
@@ -84,7 +84,7 @@
               </p>
               <p class="about-wrapper__info-text">
                 I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development. Currently, 
-                I'm working as a Freelancer at Sanskrutihomes and started my professional journey at corporate with MAQ Software.
+                I'm working at Make My Trip as a Software Engineer.
                 <br>
                 Apart from that, I've also been devoting my time to some of my side projects and free-lancing work seeking learning 
                 opportunities with every step. And to feed my unsatiable will for work involving my area of interests.
