--- a/src/template.html
+++ b/src/template.html
@@ -226,7 +226,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Poth Hole Detection</h3>
+                <h3 class="project-wrapper__text-title">Pot-Hole Detection</h3>
                 <div>
                   <p class="mb-4">
                    A pothole detection tool that uses opencv and image processing to detect
