--- a/src/template.html
+++ b/src/template.html
@@ -83,8 +83,7 @@
 
               </p>
               <p class="about-wrapper__info-text">
-                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development. Currently, 
-                I'm working at Make My Trip as a Software Engineer.
+                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development. 
                 <br>
                 Apart from that, I've also been devoting my time to some of my side projects and free-lancing work seeking learning 
                 opportunities with every step. And to feed my unsatiable will for work involving my area of interests.
