--- a/src/template.html
+++ b/src/template.html
@@ -83,22 +83,28 @@
 
               </p>
               <p class="about-wrapper__info-text">
-                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development. 
+                
+                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development.
+                Currently working with Mahindra Logistics as a Full Stack Developer.
                 <br>
-                Apart from that, I've also been devoting my time to some of my side projects and free-lancing work seeking learning 
-                opportunities with every step. And to feed my unsatiable will for work involving my area of interests.
+                Apart from that, I've also been devoting my time to some of my side projects
+                and free-lancing work seeking learning opportunities with every step.
                 <br>
-                I have previously interned at DRDO Dehli as a Data Science Intern, worked under senior scientist 
-                Pallaw Kumar Mishra. I am constantly looking to improve my skills with projects, challenges, and 
-                learning opportunities. Apart from this, I have previously engaged in many co-curricular activities 
-                including being an active part of my college’s Computer Society of India convenor, 
+                And to feed my unsatiable will for work involving my area of interests I'm working on my personal projects side by side.
+                I have previously interned at DRDO Delhii as a Data Science Intern, worked under senior scientist Pallaw Kumar Mishra.
                 <br>
-                I teach students and organize workshops for them. My experience in both technical and non-technical 
-                sides has provided me with a perfect blend of soft skills and technical knowledge, I am highly diligent, 
-                intellectually curious, and achievement-oriented in my work.
+                I am constantly looking to improve my skills with projects, challenges, and learning opportunities.
+                Apart from this, I have previously engaged in many co-curricular activities including being an active part of my college’s 
+                <br>
+                Computer Society of India convenor,
+                I used to teach students and organize workshops for them. 
+                <br>
+                My experience in both technical and non-technical sides has provided me with a perfect 
+                <br>
+                blend of soft skills and technical knowledge, I am highly diligent, intellectually curious, and achievement-oriented in my work
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1oDHNsnhw4dUjbsYQxnGaXCZ_V5KCyTp6/view?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1vJCiGA1G0xc_q7fMLeJqe3e7L6Uu1j9w/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -423,8 +429,8 @@
           <a href="https://github.com/adityasharma28" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
-          <a href="https://www.hackerrank.com/aditya28071999" target="_blank">
-            <i class="fab fa-hackerrank"></i>
+          <a href="https://www.instagram.com/aaditya.sharma___/" target="_blank">
+            <i class="fab fa-instagram"></i>
           </a>
           <a href="https://leetcode.com/aadityasharma/" target="_blank">
             <span class="iconify" data-icon="simple-icons:leetcode" data-inline="false"></span>
