--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   -
   Simplefolio is a clean and responsive portfolio template for Developers!
   Created by Jacobo Martinez.
-  -
+
   Github Repo: https://github.com/cobidev/simplefolio/
   Readme: https://github.com/cobidev/simplefolio/README.md
   -
@@ -104,7 +104,7 @@
                 blend of soft skills and technical knowledge, I am highly diligent, intellectually curious, and achievement-oriented in my work
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1vJCiGA1G0xc_q7fMLeJqe3e7L6Uu1j9w/view?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="">
                   View Resume
                 </a>
               </span>
