--- a/src/template.html
+++ b/src/template.html
@@ -84,22 +84,22 @@
               </p>
               <p class="about-wrapper__info-text">
                 
-                I am a Computer Science Engineering graduate, highly interested in Data Science and Software Development.
-                Currently working with Mahindra Logistics as a Full Stack Developer.
+                I am a Computer Science Engineering graduate, highly interested in Data Engineering and Software Development.
+                Currently working with In Time Tec as a Software Engineer in Data Engineering Dept.
                 <br>
                 Apart from that, I've also been devoting my time to some of my side projects
                 and free-lancing work seeking learning opportunities with every step.
                 <br>
                 And to feed my unsatiable will for work involving my area of interests I'm working on my personal projects side by side.
-                I have previously interned at DRDO Delhii as a Data Science Intern, worked under senior scientist Pallaw Kumar Mishra.
+                I have previously interned at DRDO Delhi as a Data Science Intern, worked under senior scientist Pallaw Kumar Mishra.
                 <br>
                 I am constantly looking to improve my skills with projects, challenges, and learning opportunities.
-                Apart from this, I have previously engaged in many co-curricular activities including being an active part of my college’s 
                 <br>
-                Computer Society of India convenor,
-                I used to teach students and organize workshops for them. 
+                I'm also pursuing my M. Tech in Cloud Computing and Machine Learning from IIT Patna, 
                 <br>
-                My experience in both technical and non-technical sides has provided me with a perfect 
+                I have learned about ML and Data Engineering concepts in detail.
+                <br>
+                My experience in both technical and non-technical sides has provided me with a perfect
                 <br>
                 blend of soft skills and technical knowledge, I am highly diligent, intellectually curious, and achievement-oriented in my work
               </p>
