added resume link

--- a/src/template.html
+++ b/src/template.html
@@ -85,6 +85,7 @@
               <p class="about-wrapper__info-text">
                 
                 I am a Computer Science Engineering graduate, highly interested in Data Engineering and Software Development.
+                Having 3.5+ Years of Experience with Python, SQL, Pyspark, AWS, Azure, ADF, Databricks and other technologies.
                 Currently working with In Time Tec as a Software Engineer in Data Engineering Dept.
                 <br>
                 Apart from that, I've also been devoting my time to some of my side projects
@@ -97,14 +98,14 @@
                 <br>
                 I'm also pursuing my M. Tech in Cloud Computing and Machine Learning from IIT Patna, 
                 <br>
-                I have learned about ML and Data Engineering concepts in detail.
+                I have learned about ML, Cloud Computing and Data Engineering concepts in detail.
                 <br>
                 My experience in both technical and non-technical sides has provided me with a perfect
                 <br>
                 blend of soft skills and technical knowledge, I am highly diligent, intellectually curious, and achievement-oriented in my work
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/18YGdKmcXojtjA9yGrYxvTbdCJp6-DkAO/view?usp=sharing">
                   View Resume
                 </a>
               </span>
