--- a/src/template.html
+++ b/src/template.html
@@ -85,8 +85,8 @@
               <p class="about-wrapper__info-text">
                 
                 I am a Computer Science Engineering graduate, highly interested in Data Engineering and Software Development.
-                Having 3.5+ Years of Experience with Python, SQL, Pyspark, AWS, Azure, ADF, Databricks and other technologies.
-                Currently working with In Time Tec as a Software Engineer in Data Engineering Dept.
+                Having 4.5+ Years of Experience with Python, SQL, Pyspark, AWS, Azure, ADF, Databricks and other technologies.
+                Currently working as Data Engineer.
                 <br>
                 Apart from that, I've also been devoting my time to some of my side projects
                 and free-lancing work seeking learning opportunities with every step.
@@ -105,7 +105,7 @@
                 blend of soft skills and technical knowledge, I am highly diligent, intellectually curious, and achievement-oriented in my work
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/18YGdKmcXojtjA9yGrYxvTbdCJp6-DkAO/view?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1XUfKAB4zx1rUI9ZLdwslMBYhmIOLKI8z/view?usp=sharing">
                   View Resume
                 </a>
               </span>
